--- a/src/client/index.html
+++ b/src/client/index.html
@@ -43,7 +43,7 @@
         template: /*html*/`
             <v-app-bar density="compact" class="text-white">
                 <!-- <v-app-bar-nav-icon @click="nav = !nav"></v-app-bar-nav-icon> -->
-                <v-app-bar-title class="text-h5">OpenAI API Example</v-app-bar-title>
+                <v-app-bar-title class="text-h5 text-center">OpenAI API Example</v-app-bar-title>
 
                 <template #image>
                     <v-img gradient="45deg, #E4980D, #A244E2"></v-img>
